force-app/main/default/objects/Transaction__c/fields/Amendment_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Renewal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Amendment/Renewal record to which the transaction relates.</description>
    <inlineHelpText>The Amendment/Renewal record to which the transaction relates.</inlineHelpText>
    <label>Amendment/Renewal</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>