force-app/main/default/objects/Transaction__c/fields/Customer_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Account_Name__c</fullName>
    <formula>Payment_Method__r.Bank_Account_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Account Name</label>
    <type>Text</type>
</CustomField>