force-app/main/default/objects/Transaction__c/fields/Customer_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Account_Number__c</fullName>
    <formula>Payment_Method__r.Bank_Account_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Account Number</label>
    <type>Text</type>
</CustomField>