force-app/main/default/objects/Transaction__c/fields/Customer_Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Bank_Name__c</fullName>
    <formula>Payment_Method__r.Bank_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Bank Name</label>
    <type>Text</type>
</CustomField>