force-app/main/default/objects/Transaction__c/fields/Customer_Sort_Code__c.field-meta.xml
<CustomField>
    <fullName>Customer_Sort_Code__c</fullName>
    <formula>Payment_Method__r.Sort_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Sort Code</label>
    <type>Text</type>
</CustomField>