force-app/main/default/objects/Transaction__c/fields/Membership__c.field-meta.xml
<CustomField>
    <fullName>Membership__c</fullName>
    <formula>CASESAFEID(Payment_Method__r.Membership__r.Id)</formula>
    <label>Membership</label>
    <type>Text</type>
</CustomField>