force-app/main/default/objects/Transaction__c/fields/Membership_DD_Ident__c.field-meta.xml
<CustomField>
    <fullName>Membership_DD_Ident__c</fullName>
    <formula>IF( 
Payment_Method__r.Membership__r.Old_MN__c = &quot;&quot;, 
Payment_Method__r.Membership__r.Membership_Number__c +&quot;DIRECT DBT&quot;, 
LPAD(Payment_Method__r.Membership__r.Old_MN__c, 6, &apos;0&apos;)+&quot;DIRECT DEBIT&quot; 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Membership DD Ident</label>
    <type>Text</type>
</CustomField>