force-app/main/default/objects/Transaction__c/fields/Membership_Number__c.field-meta.xml
<CustomField>
    <fullName>Membership_Number__c</fullName>
    <formula>Payment_Method__r.Membership__r.Membership_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Membership Number</label>
    <type>Text</type>
</CustomField>