force-app/main/default/objects/Transaction__c/fields/Transaction_Type_Explained__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Type_Explained__c</fullName>
    <formula>IF(  Transaction_Type__c = &apos;0N&apos;, &apos;New Instruction&apos;,
IF(  Transaction_Type__c = &apos;01&apos;, &apos;First Payment&apos;,
IF(  Transaction_Type__c = &apos;17&apos;, &apos;Renewal Payment&apos;,
IF(  Transaction_Type__c = &apos;0C&apos;, &apos;Cancelled Instruction&apos;, &apos;&apos;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Transaction Type Explained</label>
    <type>Text</type>
</CustomField>