force-app/main/default/objects/Transaction__c/recordTypes/Cash_Cheque.recordType-meta.xml
<RecordType>
    <fullName>Cash_Cheque</fullName>
    <active>true</active>
    <label>Cash/Cheque</label>
</RecordType>