force-app/main/default/objects/Transaction__c/recordTypes/Credit_Card.recordType-meta.xml
<RecordType>
    <fullName>Credit_Card</fullName>
    <active>true</active>
    <label>Debit/Credit Card</label>
</RecordType>