force-app/main/default/objects/Transaction__c/validationRules/No_null_values_allowed_in_Amount.validationRule-meta.xml
<ValidationRule>
    <fullName>No_null_values_allowed_in_Amount</fullName>
    <active>false</active>
    <errorConditionFormula>ISNULL(Amount__c  )</errorConditionFormula>
    <errorDisplayField>Amount__c</errorDisplayField>
    <errorMessage>Amount on transaction cannot be null</errorMessage>
</ValidationRule>