force-app/main/default/objects/Transaction__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Membership_Number__c</columns>
    <columns>Transaction_Type__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Transaction_Date__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>Status__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>