force-app/main/default/objects/Transaction__c/listViews/All_todays_transactions.listView-meta.xml
<ListView>
    <fullName>All_todays_transactions</fullName>
    <columns>NAME</columns>
    <columns>Amount__c</columns>
    <columns>Membership_Number__c</columns>
    <columns>Payment_Method__c</columns>
    <columns>Status__c</columns>
    <columns>Transaction_Date__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>RECORDTYPE</columns>
    <columns>Transaction_Type_Explained__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Amount__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Transaction_Date__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>All todays transactions</label>
</ListView>