force-app/main/default/objects/Transaction__c/listViews/todays_0n_transactions.listView-meta.xml
<ListView>
    <fullName>todays_0n_transactions</fullName>
    <columns>NAME</columns>
    <columns>Membership_Number__c</columns>
    <columns>Amount__c</columns>
    <columns>Status__c</columns>
    <columns>Transaction_Date__c</columns>
    <columns>Transaction_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Transaction_Date__c</field>
        <operation>equals</operation>
        <value>TODAY,YESTERDAY</value>
    </filters>
    <filters>
        <field>Transaction_Type__c</field>
        <operation>equals</operation>
        <value>0N</value>
    </filters>
    <label>Today&apos;s 0N transactions</label>
</ListView>